--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <!--<a href="jasmine-test-runner.html">Run Unit Tests</a>-->
+  <a href="jasmine-test-runner.html">Run Unit Tests</a>
 </body>
 </html>
